--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -18,7 +18,10 @@
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     ScrollViewer.CanContentScroll="False"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Loaded="Page_Loaded" 
+    MouseMove="Page_MouseMove"
+    MouseRightButtonUp="Page_MouseRightButtonUp">
 
     <Page.Resources>
         <converters:NumberFormatConverter x:Key="NumberFormatConverter"/>
@@ -212,7 +215,8 @@
                             <TextBox Grid.Column="0"
                                     x:Name="FileTextBox"
                                     Style="{StaticResource AppTextBoxStyle}"
-                                    Text="{Binding Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                    Text="{Binding Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    TextChanged="FileTextBox_TextChanged"/>
                             <ui:Button Grid.Column="1" 
                                     Content="..." 
                                     Width="30"
@@ -1240,12 +1244,15 @@
                                     Height="250" 
                                     Margin="0,10,10,10">
                                 <Grid>
-                                    <Viewport3D x:Name="ModelViewport">
-                                        <!-- 3D Model wird hier angezeigt -->
-                                    </Viewport3D>
-                                    
+                                    <Image
+                                        x:Name="DxImage" 
+                                        Stretch="UniformToFill" 
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        MouseRightButtonDown="DxImage_MouseRightButtonDown" MouseWheel="DxImage_MouseWheel" />
+
                                     <!-- Fehlermeldung Overlay -->
-                                    <Border Background="#99000000" 
+                                    <!-- <Border Background="#99000000" 
                                             VerticalAlignment="Center" 
                                             HorizontalAlignment="Center"
                                             Padding="15"
@@ -1286,7 +1293,7 @@
                                                          HorizontalAlignment="Center"/>
                                             </Border>
                                         </StackPanel>
-                                    </Border>
+                                    </Border> -->
                                 </Grid>
                             </Border>
                             
