--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -1244,6 +1244,10 @@
                                     Height="250" 
                                     Margin="0,10,10,10">
                                 <Grid>
+                                    <TextBlock 
+                                        x:Name="Model3DFilePathTextBlock" 
+                                        Visibility="Hidden" 
+                                        Text="{Binding ViewModel.MoversView.CurrentItem.Model.Model3DFilePath, Mode=OneWay}" />
                                     <Image
                                         x:Name="DxImage" 
                                         Stretch="UniformToFill" 
