--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -215,8 +215,7 @@
                             <TextBox Grid.Column="0"
                                     x:Name="FileTextBox"
                                     Style="{StaticResource AppTextBoxStyle}"
-                                    Text="{Binding Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                    TextChanged="FileTextBox_TextChanged"/>
+                                    Text="{Binding Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             <ui:Button Grid.Column="1" 
                                     Content="..." 
                                     Width="30"
@@ -1244,10 +1243,11 @@
                                     Height="250" 
                                     Margin="0,10,10,10">
                                 <Grid>
-                                    <TextBlock 
+                                    <TextBox 
                                         x:Name="Model3DFilePathTextBlock" 
-                                        Visibility="Hidden" 
-                                        Text="{Binding ViewModel.MoversView.CurrentItem.Model.Model3DFilePath, Mode=OneWay}" />
+                                        Visibility="Collapsed" 
+                                        Text="{Binding ViewModel.MoversView.CurrentItem.Model.Model3DFilePath, Mode=OneWay}"
+                                        TextChanged="Model3DFilePathTextBlock_TextChanged" />
                                     <Image
                                         x:Name="DxImage" 
                                         Stretch="UniformToFill" 
